plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
	id 'groovy'
	id 'checkstyle'
	id 'org.sonarqube' version '4.4.1.3373'
}

checkstyle {
	toolVersion '8.36.2'
	configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
}

group = 'com.honeybadgersoftware'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.liquibase:liquibase-core'
	implementation 'org.liquibase:liquibase-core:4.23.0'
	implementation 'org.liquibase.ext:liquibase-postgresql:4.23.0'
	implementation 'org.apache.commons:commons-lang3'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.4'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'org.hibernate:hibernate-ehcache:5.6.15.Final'
//	implementation 'org.hibernate.orm:hibernate-ehcache:6.0.0.Alpha7'



	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation "org.testcontainers:spock"
	testImplementation 'org.wiremock:wiremock:3.3.1'


}

sourceSets {
	main {
		java {
			srcDirs = ['src/main/java']
		}
	}

	test {
		java {
			srcDirs = ['src/test/groovy']
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
	properties {
		property "sonar.projectKey", "CY-Availability-Service"
		property "sonar.organization", "honeybadgersoftware"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.token", "2de1a5c02494f70ae448f842ff91143b47f39426"
	}
}